Adding exercise 1 for Api Design in Java